--- a/client/nav.html
+++ b/client/nav.html
@@ -19,17 +19,17 @@
     {{/if}}
     {{#if isSensei}}
       <li>
-        <a href="/admin/vdo/course/oragefan">
+        <a href="/admin/vdo/course/{{nickSlack}}">
           <button type="button" class="btn btn-info btn-lg fa fa-mortar-board"></button>
         </a>
       </li>
       <li>
-        <a href="/admin/vdo/tournament/oragefan">
+        <a href="/admin/vdo/tournament/{{nickSlack}}">
           <button type="button" class="btn btn-info btn-lg fa fa-comment"></button>
         </a>
       </li>
       <li>
-        <a href="/admin/insei/oragefan">
+        <a href="/admin/insei/{{nickSlack}}">
           <button type="button" class="btn btn-info btn-lg fa fa-user"></button>
         </a>
       </li>
