Add new icon for profile

--- a/client/nav.html
+++ b/client/nav.html
@@ -12,6 +12,11 @@
         </a>
       </li>
       <li>
+        <a href="/inseis/{{nickSlack}}">
+          <button type="button" class="btn btn-success btn-lg fa fa-users"></button>
+        </a>
+      </li>
+      <li>
         <a href="/insei/{{nickSlack}}">
           <button type="button" class="btn btn-success btn-lg fa fa-user"></button>
         </a>
@@ -29,8 +34,8 @@
         </a>
       </li>
       <li>
-        <a href="/admin/insei/{{nickSlack}}">
-          <button type="button" class="btn btn-info btn-lg fa fa-user"></button>
+        <a href="/admin/inseis/{{nickSlack}}">
+          <button type="button" class="btn btn-info btn-lg fa fa-users"></button>
         </a>
       </li>
     {{/if}}
