--- a/packages/list-videos/client/FO-list-course.html
+++ b/packages/list-videos/client/FO-list-course.html
@@ -17,7 +17,7 @@
 
 <template name="vdoCourseFO">
   <li class="col-md-3 vdo">
-    <div class="panel panel-success">
+    <div class="panel panel-default">
       <header class="panel-heading">
         <span class="label panel-title">Cours n° {{rank}} - {{category}}</span>
       </header>
