--- a/packages/list-videos/client/FO-list-tournament.html
+++ b/packages/list-videos/client/FO-list-tournament.html
@@ -25,7 +25,7 @@
 
 <template name="vdoTournamentFO">
   <li class="col-md-3 vdo">
-    <div class="panel panel-success">
+    <div class="panel panel-default">
       <header class="panel-heading">
         <span class="label panel-title">{{blackPlayer}} vs {{whitePlayer}}</span>
       </header>
