--- a/packages/slack-inseis/client/list-inseis.html
+++ b/packages/slack-inseis/client/list-inseis.html
@@ -1,8 +1,8 @@
 <template name="inseisList">
   <div class="col-md-5">
-    <article class="panel panel-success">
+    <article class="panel panel-default">
       <header class="panel-heading">
-        <h5>Participants - <span class="label label-info">{{count}}</span></h5>
+        <h5 class="label panel-title">Liste des Inseis - <span class="badge badge-info">{{count}}</span></h5>
       </header>
       <ul class="list-group panel-body">
         {{#each inseis}}
