--- a/packages/list-videos/client/FO-list-course.html
+++ b/packages/list-videos/client/FO-list-course.html
@@ -21,9 +21,15 @@
       <header class="panel-heading">
         <span class="label panel-title">Cours n° {{rank}} - {{category}}</span>
       </header>
+      {{#if isInsei}}
       <a href="/vdo/play/{{video_id}}/{{nickSlack}}" target="_blank" class="thumbnail">
         <img id="{{video_id}}" src="data:image/jpg;base64,{{thumbnail}}">
       </a>
+      {{else}}
+        <span class="disabled thumbnail" >
+          <img src="data:image/jpg;base64,{{thumbnail}}">
+        </span>
+      {{/if}}
     </div>
   </li>
 </template>
