Add routing for great tournament

--- a/client/nav.html
+++ b/client/nav.html
@@ -7,8 +7,13 @@
     </li>
     {{#if isInsei}}
       <li>
-        <a href="/vdo/tournament/{{nickSlack}}">
+        <a href="/vdo/round/{{nickSlack}}">
           <button type="button" class="btn btn-success btn-lg fa fa-comment"></button>
+        </a>
+      </li>
+      <li>
+        <a href="/vdo/tournament/{{nickSlack}}">
+          <button type="button" class="btn btn-success btn-lg fa fa-comment-o"></button>
         </a>
       </li>
       <li>
@@ -29,8 +34,13 @@
         </a>
       </li>
       <li>
-        <a href="/admin/vdo/tournament/{{nickSlack}}">
+        <a href="/admin/vdo/round/{{nickSlack}}">
           <button type="button" class="btn btn-info btn-lg fa fa-comment"></button>
+        </a>
+      </li>
+      <li>
+        <a href="/admin/vdo/tournament/{{nickSlack}}">
+          <button type="button" class="btn btn-info btn-lg fa fa-comment-o"></button>
         </a>
       </li>
       <li>
