Add title name for video list

--- a/packages/list-videos/client/BO-list-tournament.html
+++ b/packages/list-videos/client/BO-list-tournament.html
@@ -1,4 +1,5 @@
 <template name="tournamentBO">
+  <h2>Grand tournois</h2>
   {{> insertVdoBO}}
   {{#each rounds}}
     {{> listTournamentBO round=round}}
